// Author: Christopher Schultz

namespace BleakwindBuffet.Data.Enums
{
    /// <summary>
    /// Enumerates all drink and side sizes.
    /// </summary>
    public enum Size
    {
        Small,
        Medium,
        Large
    }
}