// Author: Christopher Schultz
using System;
using System.Collections.Generic;
using System.Text;

namespace BleakwindBuffet.Data.Enums
{
    /// <summary>
    /// Enumerates all soft drink flavors.
    /// </summary>
    enum SodaFlavor
    {
        Blackberry,
        Cherry,
        Grapefruit,
        Lemon,
        Peach,
        Watermelon
    }
}
